[gd_scene load_steps=12 format=3 uid="uid://cibvs3h3cgxhn"]

[ext_resource type="PackedScene" uid="uid://c1o2ymh2bg2j2" path="res://graveyardtiles/GraveyardTileMap.tscn" id="1_1enxi"]
[ext_resource type="Script" path="res://maps/tutorial/TutorialWorld.gd" id="1_xs3xa"]
[ext_resource type="PackedScene" uid="uid://dcvp2cmkmvptm" path="res://enemy/slime/Slime.tscn" id="2_k58vo"]
[ext_resource type="Script" path="res://maps/tutorial/textareascript.gd" id="3_rbfsf"]
[ext_resource type="Script" path="res://maps/tutorial/TextEdit3.gd" id="4_dhqad"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hhpu5"]
size = Vector2(181.014, 311.449)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w4b01"]
size = Vector2(97, 105)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gxr7s"]
size = Vector2(94, 73)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iw4kl"]
size = Vector2(127, 92)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3yg0m"]
size = Vector2(128, 92)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eoc52"]
size = Vector2(192, 199)

[node name="TutorialWorld" type="Node2D" node_paths=PackedStringArray("timer")]
script = ExtResource("1_xs3xa")
timer = NodePath("Timer")

[node name="DefaultTileMap" parent="." instance=ExtResource("1_1enxi")]
layer_0/tile_data = PackedInt32Array(131071, 65537, 0, 65536, 65537, 0, 65540, 1, 0, 65541, 65537, 0, 65545, 1, 0, 65547, 65537, 0, 65548, 196609, 1, 65549, 196609, 1, 65550, 196609, 1, 131070, 65537, 0, 131069, 65537, 0, 131068, 1, 0, 131063, 1, 805306369, 65526, 131073, 1, -10, 131073, 1, -65546, 131073, 1, -131082, 131073, 1, -196618, 131073, 1, -262154, 131073, 1, -327690, 131073, 1, -393226, 131073, 1, 65551, 196609, 1, 131062, 196609, 1, 15, 131073, 1, -65521, 131073, 1, -131057, 131073, 1, -196593, 131073, 1, -262129, 131073, 1, -327665, 131073, 1, -393201, 131073, 1, -458737, 131073, 1, -524273, 196609, 1, -458762, 196609, 1, 196598, 196609, 1, 196599, 196609, 1, 196600, 1, 805306369, 196604, 65537, 1342177281, 196605, 196609, 1, 196606, 196609, 1, 196607, 196609, 1, 131072, 196609, 1, 131073, 196609, 1, 196610, 196609, 1, 196611, 196609, 1, 196612, 196609, 1, 196613, 196609, 1, 262134, 196609, 1, 262135, 196609, 1, 262136, 196609, 1, 262137, 65537, 0, 262138, 65537, 0, 262140, 196609, 1, 262141, 196609, 1, 262142, 196609, 1, 262143, 196609, 1, 196608, 196609, 1, 196609, 196609, 1, 131074, 196609, 1, 131075, 65537, 0, 131076, 196609, 1, 131077, 196609, 1, 131078, 196609, 1, 131081, 65537, 1342177281, 196617, 196609, 1, 196616, 65537, 0, 196615, 196609, 1, 196614, 196609, 1, 131082, 196609, 1, 131083, 196609, 1, 131084, 196609, 1, 131085, 196609, 1, 131086, 196609, 1, 131087, 196609, 1, 196623, 196609, 1, 196622, 196609, 1, 196621, 196609, 1, 196620, 196609, 1, 196619, 196609, 1, 196618, 196609, 1, 262158, 196609, 1, 262157, 196609, 1, 262156, 196609, 1, 262155, 196609, 1, 262154, 196609, 1, 262153, 196609, 1, 262152, 196609, 1, 262151, 196609, 1, 262150, 196609, 1, 262149, 196609, 1, 262148, 196609, 1, 262147, 196609, 1, 262146, 196609, 1, 262145, 196609, 1, 327670, 196609, 1, 327671, 196609, 1, 327672, 196609, 1, 327673, 196609, 1, 327674, 196609, 1, 327675, 196609, 1, 327676, 196609, 1, 327677, 196609, 1, 327678, 196609, 1, 327679, 196609, 1, 262144, 196609, 1, 262159, 196609, 1, 65552, 2, 0, 131088, 65538, 0, 131089, 65538, 0, 131090, 65538, 0, 17, 2, 0, -131047, 2, 0, -131046, 2, 0, -65512, 65538, 0, 24, 65538, 0, 65560, 65538, 0, 131096, 65538, 0, 131097, 65538, 0, 65561, 65538, 0, 65562, 65538, 0, 26, 65538, 0, 25, 65538, 0, -65511, 65538, 0, -65510, 65538, 0, 131098, 65538, 0, 65559, 2, 0, 131095, 65538, 0, 65553, 65538, 0, 131091, 65538, 0, 19, 65538, 0, 65555, 65538, 0, 65554, 65538, 0, 16, 0, 2, 18, 0, 2, -524272, 65538, 0, -524271, 65538, 0, -524270, 65538, 0, -524269, 65538, 0, -524268, 65538, 0, -524267, 65538, 0, -524266, 65538, 0, -524265, 65538, 0, -524264, 65538, 0, -524263, 65538, 0, -524262, 65538, 0, -589798, 65538, 0, -589799, 65538, 0, -589800, 65538, 0, -589801, 65538, 0, -589802, 65538, 0, -589803, 65538, 0, -589804, 65538, 0, -589805, 65538, 0, -589806, 65538, 0, -589807, 65538, 0, -589808, 65538, 0, 65538, 1, 1342177280, 65537, 65537, 0, 65542, 65537, 0, 21, 65536, 1, 23, 65538, 0, -196583, 65538, 0, -196582, 65538, 0, -262118, 65538, 0, -262119, 65538, 0, -393191, 65538, 0, -327655, 65538, 0, -393190, 65538, 0, -327654, 65538, 0, -131053, 2, 0, -65517, 65538, 0, 65557, 2, 0, 196627, 131074, 0, 262163, 131074, 0, 262164, 131074, 0, 262165, 131074, 0, 262166, 131074, 0, 262167, 131074, 0, 196631, 131074, 0, 196626, 131074, 0, 262162, 131074, 0, 262161, 131074, 0, 196625, 131074, 0, 196624, 131074, 0, 262160, 131074, 0, 196632, 131074, 0, 262168, 131074, 0, 262169, 131074, 0, 262170, 131074, 0, 196634, 131074, 0, 196633, 131074, 0, 131061, 65537, 0, 131060, 65537, 0, 131059, 1, 0, 131056, 131073, 0, 196592, 131073, 1, 262128, 131073, 1, 196595, 65537, 1879048193, 262131, 65537, 1879048193, 327667, 65537, 1879048193, 327664, 131073, 1, 196596, 196609, 1, 262132, 196609, 1, 327668, 196609, 1, 327669, 196609, 1, 262133, 196609, 1, 196597, 196609, 1, -65548, 1, 268435458, -65549, 65537, 2, -65550, 1, 2, -458763, 65537, 1, -393228, 65537, 1073741825, -327692, 65537, 1073741825, -262156, 1, 268435457, -262157, 65537, 1, -262158, 65537, 1, -262159, 1, 1, -327695, 65537, 1342177281, -327694, 196609, 1, -327693, 196609, 1, -393229, 196609, 1, -393230, 196609, 1, -458766, 196609, 1, -458765, 196609, 1, -458764, 196609, 1, -393232, 65537, 1, -393231, 196609, 1, -458767, 196609, 1, -458768, 196609, 1, 65520, 0, 1, -458761, 65537, 1, -458760, 65537, 1, -458759, 65537, 1, -458758, 65537, 1, -458757, 65537, 1, -458756, 65537, 1, -458755, 65537, 1, -458754, 65537, 1, -458753, 65537, 1, -524288, 65537, 1, -524287, 65537, 1, -524286, 65537, 1, -524285, 65537, 1, -524284, 65537, 1, -524283, 65537, 1, -524282, 65537, 1, -524281, 65537, 1, -524280, 65537, 1, -524279, 65537, 1, -524278, 65537, 1, -524277, 65537, 1, -524276, 65537, 1, -524275, 65537, 1, -524274, 65537, 1, -589809, 196609, 1, -589810, 196609, 1, -589811, 196609, 1, -589812, 196609, 1, -589813, 196609, 1, -589814, 196609, 1, -589815, 196609, 1, -589816, 196609, 1, -589817, 196609, 1, -589818, 196609, 1, -589819, 196609, 1, -589820, 196609, 1, -589821, 196609, 1, -589822, 196609, 1, -589823, 196609, 1, -589824, 196609, 1, -524289, 196609, 1, -524290, 196609, 1, -524291, 196609, 1, -524292, 196609, 1, -524293, 196609, 1, -524294, 196609, 1, -524295, 196609, 1, -524296, 196609, 1, -524297, 196609, 1, -524298, 196609, 1, -524299, 196609, 1, -524300, 196609, 1, -524301, 196609, 1, -524302, 196609, 1, -524303, 196609, 1, -524304, 196609, 1, 262139, 65537, 0, 65534, 3, 1, 0, 131075, 1, 12, 65537, 1610612736, -65524, 65537, 1610612736, 13, 196609, 1, -65523, 196609, 1, 14, 196609, 1, -65522, 196609, 1, -131058, 65537, 0, -131059, 65537, 0, -131060, 1, 0, 10, 131073, 0, -196595, 65536, 0, 6, 131072, 0, 131080, 0, 2, 65539, 0, 2, 65535, 65539, 1, 65543, 1, 805306369, 131079, 65537, 1610612737, 65546, 196609, 1, -131081, 0, 0)
layer_1/tile_data = PackedInt32Array(65551, 262145, 0, 131062, 262145, 0, -393231, 327681, 1610612736, -458764, 327681, 805306368, -458762, 262145, 805306368, -524273, 262145, 805306368, 65537, 327681, 0, 65542, 327681, 0, 65538, 327681, 1342177280, 65543, 327681, 1342177280, 131063, 1, 3, 262140, 327681, 0, 262136, 327681, 1342177280, 196599, 327681, 1342177280, 65546, 262145, 0, 196617, 327681, 0, 196615, 327681, 1342177280, 131074, 327681, 1342177280, 131076, 327681, 0, 65548, 327681, 0)
layer_2/tile_data = PackedInt32Array(196600, 1, 3, 262137, 1, 3, 131068, 1, 3, 131069, 65537, 3, 131070, 65537, 3, 131071, 65537, 3, 65536, 65537, 3, 65537, 65537, 3, 65538, 65537, 3, 65540, 65537, 3, 65541, 65537, 3, 65542, 65537, 3, 65543, 65537, 3, 196616, 65537, 3, 65545, 65537, 3, 10, 65537, 3, 65547, 65537, 3, -131060, 65537, 3, -131059, 65537, 3, -131058, 131073, 3, 262139, 131073, 3, 262138, 65537, 3)
layer_3/tile_data = PackedInt32Array(-131085, 196611, 1, 65524, 196611, 1, 65523, 196611, 0)
layer_5/tile_data = PackedInt32Array(16, 196610, 1, -65520, 131074, 2, -131056, 131074, 2, -131055, 196610, 1, -65519, 131074, 2, -65518, 196610, 1, 18, 196610, 1, -131054, 196610, 2, -196591, 196610, 1, -196592, 196610, 1, -262128, 196610, 1, -327664, 131074, 1, -393200, 196610, 1, -458736, 196610, 2, -458735, 131074, 1, -458734, 196610, 2, -458733, 196610, 1, -458732, 196610, 2, -458731, 131074, 1, -393195, 196610, 1, -393196, 131074, 2, -327660, 131074, 2, -262124, 131074, 1, -262125, 131074, 1, -327661, 131074, 2, -327659, 196610, 2, -262123, 196610, 1, -196588, 196610, 2, -196589, 196610, 2, -196590, 131074, 1, -262126, 196610, 1, -327662, 131074, 2, -393198, 131074, 2, -393197, 131074, 1, -262127, 131074, 1, -327663, 131074, 1, -393199, 131074, 1, -393194, 131074, 1, -196587, 131074, 2, -131051, 196610, 1, -65515, 131074, 2, 21, 196610, 1, 22, 196610, 2, 23, 131074, 2, -65513, 131074, 1, -65514, 196610, 1, -131050, 131074, 1, -196586, 196610, 1, -262122, 131074, 1, -327658, 196610, 1, -262121, 131074, 1, -262120, 196610, 2, -262119, 131074, 1, -196583, 131074, 1, -262118, 196610, 2, -196582, 131074, 2, -196584, 131074, 1, -327655, 131074, 1, -327654, 131074, 2, -327656, 131074, 1, -327657, 196610, 1, -393193, 131074, 2, -393192, 196610, 2, -393191, 196610, 2, -393190, 131074, 2, -458727, 131074, 2, -458728, 131074, 1, -458729, 131074, 2, -458730, 131074, 2, -458726, 196610, 1, -196585, 196610, 1, 20, 196610, 2, 65556, 196610, 2, 131092, 131074, 1, 131093, 196610, 2, 131094, 196610, 2, 65558, 196610, 1, 196629, 131074, 1, 196630, 196610, 2, 196628, 196610, 1, -131049, 196610, 2, -131052, 196610, 1, -65516, 131074, 2, -393227, 327681, 2, -327691, 262145, 1, -262155, 262145, 1, -196619, 262145, 2, -131083, 262145, 1, -65547, 327681, 2, -11, 327681, 2, 65525, 327681, 2, 65524, 262145, 1, -12, 262145, 2, -13, 327681, 2, 65523, 262145, 2, 65522, 327681, 1, 65521, 262145, 1, -15, 262145, 1, -14, 262145, 2, -16, 262145, 2, 65520, 262145, 1, -196620, 262145, 2, -196621, 327681, 2, -131085, 327681, 1, -131084, 262145, 2, -196622, 327681, 2, -131086, 327681, 1, -131087, 327681, 1, -65551, 262145, 1, -196623, 327681, 1, -196624, 262145, 1, -131088, 262145, 2, -65552, 262145, 1, -327696, 262145, 2, -262160, 262145, 1, 131057, 262145, 2, 131058, 262145, 1, 196594, 262145, 2, 196593, 327681, 1, 262129, 262145, 2, 262130, 262145, 2, 327666, 327681, 1, 327665, 327681, 1)

[node name="Slime" parent="." instance=ExtResource("2_k58vo")]
z_index = -1
position = Vector2(-18, 17)
speed = 0
acceleration = 0.0
jump_velocity = 0
friction = 1.0
max_fall_speed = 1000
gravity_scale = 2.0
aggro_range = 0
chase_jump_speed = 0

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-283, -40)
scale = Vector2(0.345, 0.345)
collision_layer = 2
collision_mask = 2
script = ExtResource("3_rbfsf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(78.2609, 147.826)
shape = SubResource("RectangleShape2D_hhpu5")

[node name="TextEdit" type="TextEdit" parent="Area2D"]
offset_left = -8.69565
offset_right = 174.304
offset_bottom = 93.0
text = "You walk with WASD or arrow keys"
wrap_mode = 1

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_rbfsf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(-176.5, 43.5)
shape = SubResource("RectangleShape2D_w4b01")

[node name="TextEdit2" type="TextEdit" parent="Area2D2"]
offset_left = -225.0
offset_top = 11.0
offset_right = 56.0
offset_bottom = 110.0
scale = Vector2(0.345, 0.345)
text = "jump with spacebar or arrow up.
hold down the button for a stronger jump"
wrap_mode = 1

[node name="Area2D3" type="Area2D" parent="." node_paths=PackedStringArray("timer")]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_rbfsf")
complex = true
timer = NodePath("Timer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2(-78, -4.5)
shape = SubResource("RectangleShape2D_gxr7s")

[node name="TextEdit3" type="TextEdit" parent="Area2D3"]
offset_left = -51.0
offset_top = -56.0
offset_right = 195.0
offset_bottom = 43.0
scale = Vector2(0.345, 0.345)
text = "Slimes are a dangerous enemy

This one has been captured"
script = ExtResource("4_dhqad")

[node name="TextEdit9" type="TextEdit" parent="Area2D3"]
offset_left = -128.0
offset_top = -40.0
offset_right = 58.0
offset_bottom = 59.0
scale = Vector2(0.345, 0.345)
text = "kill it by picking up
your box with
interact (E)"
script = ExtResource("4_dhqad")
id = 1

[node name="TextEdit8" type="TextEdit" parent="Area2D3"]
offset_left = -129.0
offset_top = -40.0
offset_right = 57.0
offset_bottom = 59.0
scale = Vector2(0.345, 0.345)
text = "Then throw it by
holding and releasing
the interact key (E)"
script = ExtResource("4_dhqad")
id = 2

[node name="Timer" type="Timer" parent="Area2D3"]

[node name="Timer" type="Timer" parent="."]

[node name="Area2D4" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_rbfsf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4"]
position = Vector2(63.5, 19)
shape = SubResource("RectangleShape2D_iw4kl")

[node name="TextEdit7" type="TextEdit" parent="Area2D4"]
offset_left = 70.0
offset_top = -29.0
offset_right = 313.0
offset_bottom = 70.0
scale = Vector2(0.345, 0.345)
text = "Slimes are not the only threat

take care to avoid the spikes"

[node name="Area2D5" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_rbfsf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D5"]
position = Vector2(193, -15)
shape = SubResource("RectangleShape2D_3yg0m")

[node name="TextEdit6" type="TextEdit" parent="Area2D5"]
offset_left = 175.0
offset_top = -53.0
offset_right = 361.0
offset_bottom = 48.0
scale = Vector2(0.345, 0.345)
text = "Ah, an altar of power
Walk over and gain a
powerful artifact"

[node name="Area2D6" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_rbfsf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D6"]
position = Vector2(384, -67.5)
shape = SubResource("RectangleShape2D_eoc52")

[node name="TextEdit5" type="TextEdit" parent="Area2D6"]
offset_left = 298.0
offset_top = -74.0
offset_right = 484.0
offset_bottom = 25.0
scale = Vector2(0.345, 0.345)
text = "Reach the end,

good luck"

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited"]
[connection signal="body_entered" from="Area2D2" to="Area2D2" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D2" to="Area2D2" method="_on_body_exited"]
[connection signal="body_entered" from="Area2D3" to="Area2D3" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D3" to="Area2D3" method="_on_body_exited"]
[connection signal="timeout" from="Area2D3/Timer" to="Area2D3" method="_on_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D4" to="Area2D4" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D4" to="Area2D4" method="_on_body_exited"]
[connection signal="body_entered" from="Area2D5" to="Area2D5" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D5" to="Area2D5" method="_on_body_exited"]
[connection signal="body_entered" from="Area2D6" to="Area2D6" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D6" to="Area2D6" method="_on_body_exited"]
